--- a/apps/time-a/package.json
+++ b/apps/time-a/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test-watch": "npm run test -- --watch",
+    "test-ci": "npm run test -- --ci"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.3",
@@ -19,11 +22,15 @@
     "swr": "^1.2.1"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
     "config": "*",
     "eslint": "7.32.0",
+    "jest": "^27.5.1",
     "next-transpile-modules": "9.0.0",
+    "ts-jest": "^27.1.3",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
