--- a/apps/eldenring-b/package.json
+++ b/apps/eldenring-b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/hina-mincho": "^4.5.4",
     "framer-motion": "^6.2.8",
     "next": "^12.1.0",
     "react": "17.0.2",
