--- a/apps/hello-prisma/package.json
+++ b/apps/hello-prisma/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "prisma migrate dev --name init",
+    "dev": "ts-node script.ts"
   },
   "keywords": [],
   "author": "",
